--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ header{
     padding: 1.5rem 1rem;
 }
 
+.navone{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .navoneul,
 .navtwoul{
     list-style: none;
@@ -35,6 +41,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .branding{
@@ -82,7 +89,7 @@ header{
 .divone,
 .divtwo{
     width: 50%;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -168,6 +175,11 @@ header{
     color: var(--pfc);
 }
 
+.cartbtndiv a:hover,
+.cartbtndiv a:focus{
+    color: var(--sfc);
+}
+
 .cartbtndiv *{
     font-size: .75rem;
 }
@@ -180,4 +192,37 @@ header{
 
 .price{
     color: #ff4545;
+}
+
+
+@media (max-width: 800px){
+    body{
+        flex-direction: column;
+    }
+    
+    header{
+        padding: 1rem;
+        flex-direction: column;
+    }
+    
+    .navone{
+        flex-direction: column;
+        margin-bottom: .5rem;
+    }
+    
+    .branding{
+        margin-bottom: .5rem;
+    }
+    
+    .divone,
+    .divtwo{
+        width: 100%;
+        height: 100vh;
+    }
+    
+    .do-img{
+        max-width: 80%;
+        max-height: 70%;
+    }
+    
 }
